<resources>
    <string name="app_name">泡网</string>
    <string name="article">文章</string>
    <string name="code">代码</string>
    <string name="mine">我的</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="zero">0</string>
    <string name="praise">赞</string>

    <string name="read">阅</string>
    <string name="comment">评</string>
    <string name="comment_full">评论</string>
    <string name="like">藏</string>
    <string name="like_full">收藏</string>
    <string name="message">私信</string>
    <string name="setup">设置</string>
    <string name="click_login">点击头像登陆</string>
    <string name="login">登录</string>
    <string name="mail">邮箱</string>
    <string name="pwd">密码</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="my_article">我的文章</string>
    <string name="collection">收藏</string>
    <string name="no_data">还没有数据哦~</string>
    <string name="logout">退出登录</string>
    <string name="no_signature">还没有签名哦</string>
    <string name="try_later">请稍后再试</string>
    <string name="tip_input_keyword">请输入关键字</string>
    <string name="tip_login_success">登录成功</string>
    <string name="tip_todo">TODO</string>


    <string-array name="article_titles">
        <item>综合资讯</item>
        <item>安卓开发</item>
        <item>程序设计</item>
        <item>前端开发</item>
        <item>iOS开发</item>
        <item>数据库</item>
        <item>开发日志</item>
        <item>应用推荐</item>
        <item>每日一站</item>
    </string-array>

    <string-array name="code_titles">
        <item>全部</item>
        <item>安卓开发</item>
        <item>程序设计</item>
        <item>前端开发</item>
        <item>iOS开发</item>
    </string-array>

    <string-array name="collection">
        <item>文章</item>
        <item>代码</item>
    </string-array>


    <!-- 错误提示-->
    <string name="error_net_error">网络错误</string>
    <string name="error_con_fail">连接失败</string>
    <string name="error_parse_error">解析出错</string>
    <string name="error_unknown">未知错误</string>

</resources>
