<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fxx.pao.ui.login.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:title="@string/login"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/content_padding"
        android:layout_below="@+id/toolbar"
        android:id="@+id/til_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/mail"
            android:id="@+id/tiet_count"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/content_padding"
        android:layout_below="@+id/til_count"
        android:id="@+id/til_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/pwd"
            android:id="@+id/tiet_pwd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_margin="@dimen/content_padding"
        android:layout_below="@+id/til_pwd"
        android:text="@string/login"
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="check"
        android:id="@+id/bt_check_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>
