<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        app:title="@string/mine"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:id="@+id/toolbar_mine"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_centerInParent="true"
            android:src="@drawable/ic_default_head"
            android:scaleType="fitCenter"
            android:id="@+id/iv_avator"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_marginTop="@dimen/content_padding"
            android:textColor="@android:color/white"
            android:text="@string/click_login"
            android:layout_below="@+id/iv_avator"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_touch_bg"
        android:padding="@dimen/content_padding"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/select_item_height">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/iv_doc"
            android:src="@drawable/document"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/iv_doc"
            android:gravity="center"
            android:text="@string/article"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitCenter"
            android:src="@drawable/enter"
            android:layout_gravity="right"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </RelativeLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_touch_bg"
        android:padding="@dimen/content_padding"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/select_item_height">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/iv_collection"
            android:src="@drawable/collection"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/iv_collection"
            android:gravity="center"
            android:text="@string/like_full"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitCenter"
            android:src="@drawable/enter"
            android:layout_gravity="right"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </RelativeLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_touch_bg"
        android:padding="@dimen/content_padding"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/select_item_height">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/iv_message"
            android:src="@drawable/mail"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/iv_message"
            android:gravity="center"
            android:text="@string/message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitCenter"
            android:src="@drawable/enter"
            android:layout_gravity="right"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </RelativeLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_touch_bg"
        android:padding="@dimen/content_padding"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/select_item_height">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/iv_setup"
            android:src="@drawable/setup"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/iv_setup"
            android:gravity="center"
            android:text="@string/setup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitCenter"
            android:src="@drawable/enter"
            android:layout_gravity="right"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </RelativeLayout>

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1px" />

</LinearLayout>